--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/native-stack": "^6.11.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-confirmation-code-field": "^7.4.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-masked-text": "^1.13.0",
     "react-native-reanimated": "^3.15.1",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0"
